Now with proper lisp semantics.